<resources>
    <string name="app_name">DineServe</string>
    <string name="web_client_id">885680493348-gvn85iiaqd8e6t65t9lsn3dr11b7r7h0.apps.googleusercontent.com</string>

    <string name="fragment_map_search">fragment_map__search</string>
    <string name="string_fragment_map_search">sai</string>
    <string name="title_activity_main">Digital Menu</string>
    <string name="text_hoes_here_lol">Welcome to Demo Restaurant!</string>
    <string name="menu_display_image">whaddaya want buuub?</string>
    <string name="add_to_my_menu_">Add this Item to Order.</string>
    <string name="add_to_my_menu">add_to_my_menu_</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="Mobile_Number">MobileNumber</string>
    <string name="Place">Place</string>
    <string name="Pan_Number">PanNumber</string>
    <string name="Adhaar_Number">AdhaarNumber</string>
    <string name="settings">settings</string>


</resources>
